# libsfe

./: .clang-format  CMakeLists.txt  Makefile  README.md
benchmarks/: CMakeLists.txt  bench_libsfe.cpp
cmake/: Common.cmake
contrib/catch2/: CMakeLists.txt  catch_main.cpp
examples/: basic.cpp
include/sfe/: sfe.hpp  stacktrace.hpp
paper/: stacktrace_from_exception.html
src/: cxa_exception.h  get_stacktrace_from_exception.h  sfe.cpp  sfe.hpp  stacktrace.hpp  test.cpp
src/sfe/: CMakeLists.txt  cxa_exception.h  sfe.cpp  sfe_basic.cpp  sfe_preload.cpp  sfe_preload_v2.cpp  sfe_preload_v3.cpp
tests/: CMakeLists.txt  test.cpp  test_libsfe_basic.cpp  test_libsfe_preload.cpp  test_libsfe_preload_v3.cpp  test_terminate_preload.cpp  tests.cpp
